# marker_based_ar_demo

./: CMakeLists.txt  ReadMe.txt
src/: BGRAVideoFrame.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  MarkerDetectionFacade.hpp  MarkerDetector.cpp  MarkerDetector.hpp  main.cpp
